--- a/Instrukcja.tex
+++ b/Instrukcja.tex
@@ -5,8 +5,10 @@
 \usepackage{polski}
 \usepackage{color}
 \usepackage[utf8]{inputenc}
-
 \usepackage{titlesec}
+\usepackage{tabto}
+\usepackage{listings}
+\lstset{language=C++} 
 \titlespacing*{\section}
 {0pt}{5.5ex plus 1ex minus .2ex}{4.3ex plus .2ex}
 
@@ -35,15 +37,15 @@ Rdzeń CortexM4F wykorzystuje architekturę ARMv7M. Pod względem organizacji pa
 \item mikrokontroler STM32F4 Discovery
 \item kable USB Micro oraz USB Mini
 \item Visual studio
-\item \href{http://www.st.com/content/st_com/en/products/embedded-software/development-tool-software/stsw-link004.html}{STM32 ST-LINK Utility (kliknij aby pobrać)}
-\item \href{www.codeplex.com/Download?ProjectName=netmf4stm32&DownloadId=471395}{sterwonik USB (kliknij aby pobrać)}
-\item \href{www.codeplex.com/Download?ProjectName=netmf4stm32&DownloadId=471396}{bootloader oraz pliki hex (kliknij aby pobrać)}
-\item \href {netmf.codeplex.com/releases/view/91594}{.NET MicroFramework SDK (kliknij aby pobrać)}
+\item \href{http://www.st.com/content/st_com/en/products/embedded-software/development-tool-software/stsw-link004.html}{STM32 ST-LINK Utility (kliknij, aby pobrać)}
+\item \href{www.codeplex.com/Download?ProjectName=netmf4stm32&DownloadId=471395}{sterwonik USB (kliknij, aby pobrać)}
+\item \href{www.codeplex.com/Download?ProjectName=netmf4stm32&DownloadId=471396}{bootloader oraz pliki hex (kliknij, aby pobrać)}
+\item \href {netmf.codeplex.com/releases/view/91594}{.NET MicroFramework SDK (kliknij, aby pobrać)}
 \end{itemize}
 \subsection{Konfiguracja}
 \begin{enumerate}
 \item Pobierz pliki z punktu 2.1.
-\item Zainstaluj STM32 ST-LINK Utility, oraz SDK, resztę plików rozpakuj.
+\item Zainstaluj STM32 ST-LINK Utility oraz SDK, resztę plików rozpakuj.
 \item Podłącz kabel USB Mini (do wejścia oznaczonego jako “Złącze USB” na Rysunku 1.)
 \item Włącz ST-LINK Utility , a następnie połącz się z stm32f4 poprzez przycisk: “Connect to the = target”
 
@@ -59,7 +61,7 @@ Rdzeń CortexM4F wykorzystuje architekturę ARMv7M. Pod względem organizacji pa
 \caption{Programowanie debuggera}
 \end{figure}
 
-\item Jeżeli wszystko przebiegło prawidłowo powinny zapalić się 3 diody użytkowe. Podłącz kabel micro USB (jak na rysunku 4).
+\item Jeżeli wszystko przebiegło prawidłowo, powinny zapalić się 3 diody użytkowe. Podłącz kabel micro USB (jak na rysunku 4).
 
 \begin{figure}[H]
 \includegraphics[width=\textwidth]{image/4.jpg}
@@ -84,14 +86,14 @@ Rdzeń CortexM4F wykorzystuje architekturę ARMv7M. Pod względem organizacji pa
 \caption{Instalacja sterownika krok 2}
 \end{figure}
 
-\item Wybierz “Przeglądaj mój komputer w poszukiwaniu oprogramowania sterownika” i wybierz ścieżkę gdzie rozpakowałeś na początku sterownik. Podczas instalacji ignoruj ostrzeżenia.
+\item Wybierz “Przeglądaj mój komputer w poszukiwaniu oprogramowania sterownika” i wybierz ścieżkę, gdzie rozpakowałeś na początku sterownik. Podczas instalacji ignoruj ostrzeżenia.
 \item Uruchom MFDeploy. Wybierz Device: USB. Naduś przycisk Ping. Następnie drugie od góry Browse... , wybierz ścieżkę pozostałych dwóch plików hex: ER\_CONFIG.hex, ER\_FLASH.hex oraz wybierz Deploy.
 
 \begin{figure}[H]
 \includegraphics[width=\textwidth]{image/8.jpg}
 \caption{MF Deploy}
 \end{figure}
-\item Włącz Visual studio utwórz nowy projekt i wybierz C\# \textgreater Micro Framework \textgreater Console Application.
+\item Włącz Visual studio, utwórz nowy projekt i wybierz C\# \textgreater Micro Framework \textgreater Console Application.
 
 \begin{figure}[H]
 \includegraphics[width=\textwidth]{image/9.jpg}
@@ -106,7 +108,7 @@ Rdzeń CortexM4F wykorzystuje architekturę ARMv7M. Pod względem organizacji pa
 \end{enumerate}
 
 \section{Przycisk}
-W tym rozdziale opisana jest klasa, dzięki której można korzystać z przycisku, oraz krótka instrukcja jak napisać program z użyciem przycisku.
+W tym rozdziale opisana jest klasa, dzięki której można korzystać z przycisku oraz krótka instrukcja: jak napisać program z użyciem przycisku.
 \subsection{Klasa InterruptPort}
 Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.Hardware.
 \subsubsection{Referencje}
@@ -114,7 +116,14 @@ Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.Hardware.
 \item Microsoft.SPOT.Hardware
 \end{itemize}
 \subsubsection{Konstruktor}
- InterruptPort (Pin \textcolor{red}{portId}, bool \textcolor{red}{glitchFilter}, ResistorMode \textcolor{red}{resistor},\newline InterruptMode \textcolor{red}{interrupt})
+\begin{lstlisting}[frame=single] 
+InterruptPort (
+Pin portId, 
+bool glitchFilter,
+ResistorMode resistor,
+InterruptMode interrupt)
+\end{lstlisting}
+
 \begin{itemize}
 \item \textcolor{red}{portId} - identyfikator portu.
 \item \textcolor{red}{glitchFilter}, - obsługa filtra błędów: true -włączony, false-wyłączony
@@ -123,33 +132,38 @@ Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.Hardware.
 \end{itemize}
 \subsubsection{Funkcje}
 bool Read () - zwraca aktualną wartość portu.
-
 \subsection{Program}
 
-Aby napisać program z użyciem przycisku trzeba najpierw utworzyć dla niego obiekt:\newline \newline
-InterruptPort button = 
-new InterruptPort(\space \textcolor{red}{ (Cpu.Pin)0}, \space \textcolor{red}{ false},\space \textcolor{red}{ Port.ResistorMode.PullDown}, \space \textcolor{red}{ Port.InterruptMode.InterruptEdgeLevelHigh});
+Aby napisać program z użyciem przycisku, trzeba najpierw utworzyć dla niego obiekt:
+\begin{lstlisting}[frame=single] 
+InterruptPort button = new InterruptPort( 
+(Cpu.Pin)0, 
+false, 
+Port.ResistorMode.PullDown,
+Port.InterruptMode.InterruptEdgeLevelHigh );
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{(Cpu.Pin)0} - Przycisk znajduję się na zerowym pinie portu A, każdy port ma 16 pinów. Port A jest pierwszym portem, więc 16*0+0=0.
 \item \textcolor{red}{false} - wyłączona obsługa filtru błędów
 \item \textcolor{red}{Port.ResistorMode.PullDown} - rezystor ustawiony na pulldown (Kiedy przycisk nie jest aktywny, zwracana jest wartość logiczna 0)
-\item \textcolor{red}{Port.InterruptMode.InterruptEdgeLevelHigh} - włącza przerwanie kiedy wartość portu jest wysoka.
+\item \textcolor{red}{Port.InterruptMode.InterruptEdgeLevelHigh} - włącza przerwanie, kiedy wartość portu jest wysoka.
 \end{itemize}
-Po utworzeniu obiektu dla przycisku można też zdeklarować inne obiekty potrzebne do programu(np. led opisane w punkcie 4). Po tych czynnościach można odczytać wartość portu przycisku(czy przycisk jest wduszony) za pomocą:\newline\\
-\textcolor{red}{while(true)}\\
- if (\textcolor{red}{button.Read()} == true)\newline
- \{kod programu(np. włączanie diód) \}\\
- else\\
- \{kod programu(np. wyłączenie diód) \}\\
- 
- \begin{itemize}
+Po utworzeniu obiektu dla przycisku można też zdeklarować inne obiekty potrzebne do programu(np. led opisane w punkcie 4). Po tych czynnościach można odczytać wartość portu przycisku (czy przycisk jest wduszony) za pomocą:
+\begin{lstlisting}[frame=single] 
+while(true)
+  if (button.Read()} == true)
+      {kod programu}
+  else
+      {kod programu}
+\end{lstlisting}
+\begin{itemize}
 \item \textcolor{red}{while(true)} - Pętla sterująca, dzięki niej jest ciągle sprawdzana wartość portu przycisku.
 \item \textcolor{red}{button.Read()} - Zwraca aktualną wartość portu przycisku.
 \end{itemize}
  
  
 \section{LED}
-W tym rozdziale opisana jest klasa, dzięki której można obsługiwać diody LED, oraz krótka instrukcja jak napisać program obsługujący włączanie i wyłączanie diod LED.
+W tym rozdziale opisana jest klasa, dzięki której można obsługiwać diody LED oraz krótka instrukcja jak: napisać program obsługujący włączanie i wyłączanie diod LED.
 \subsection{Klasa OutputPort}
 Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.Hardware.
 \subsubsection{Referencje}
@@ -157,7 +171,11 @@ Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.Hardware.
 \item Microsoft.SPOT.Hardware
 \end{itemize}
 \subsubsection{Konstruktor}
- OutputPort (Pin \textcolor{red}{portId},bool \textcolor{red}{initialState})
+\begin{lstlisting}[frame=single] 
+ OutputPort (
+ Pin portId,
+ bool initialState )
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{portId} - identyfikator portu.
 \item \textcolor{red}{initialState} - stan początkowy na porcie po aktywacji.
@@ -168,29 +186,35 @@ void Write(bool \textcolor{red}{state}) - wpisuje wartość do portu.
 \item \textcolor{red}{state} - wartość wpisywana do portu.
 \end{itemize}
 \subsection{Program}
-Aby napisać program z użyciem diod trzeba dla każdej używanej diody stworzyć obiekt:\newline \newline
-OutputPort led = new OutputPort(\space \textcolor{red}{(Cpu.Pin)x},\space \textcolor{red}{ false})
+Aby napisać program z użyciem diod, trzeba dla każdej używanej diody stworzyć obiekt:
+\begin{lstlisting}[frame=single] 
+OutputPort led = new OutputPort(
+(Cpu.Pin)x,
+false)
+\end{lstlisting}
 \begin{itemize}
-\item \textcolor{red}{(Cpu.Pin)x} - x- przyjmuje wartości od 60-63 diody znajdują się na \newline końcowych pinach portu D, każdy port ma 16 pinów, więc 16*3+12=60 oraz 16*3+15=63.(niebieska-63, czerwona-62, pomarańczowa-61, zielona-60)
+\item \textcolor{red}{(Cpu.Pin)x} - x- przyjmuje wartości od 60-63, diody znajdują się na \newline końcowych pinach portu D, każdy port ma 16 pinów, więc 16*3+12=60 oraz 16*3+15=63.(niebieska-63, czerwona-62, pomarańczowa-61, \\zielona-60)
 \item \textcolor{red}{false} - stan początkowy diod - wyłączony
 \end{itemize}
 Po utworzeniu obiektów dla diod, można zająć się ich obsługą:
-\\ \textcolor{red}{while(true)}\\
-            \{\\
-                \textcolor{red}{led.Write(true);}\\
-                \textcolor{green}{for (int i = 0; i < 100000; i++) { }}\\
-                \textcolor{red}{led.Write(false);}\\
-                \textcolor{green}{for (int i = 0; i < 100000; i++) { }}\\
-\}\\
+\begin{lstlisting}[frame=single] 
+while(true)
+{
+	led.Write(true);
+	for (int i = 0; i < 100000; i++) { }
+	led.Write(false);
+	for (int i = 0; i < 100000; i++) { }
+}
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{while(true)} - Pętla sterująca, dzięki niej diody będą ciągle zmieniały swój stan.
 \item \textcolor{red}{led.Write(true);} - Włączenie diody.
 \item \textcolor{red}{led.Write(false);} - Wyłączenie diody.
-\item \textcolor{green}{for (int i = 0; i < 100000; i++) { }} - pętle opóźniające, dzięki nim diody wolniej zmieniają stan.
+\item \textcolor{red}{for (int i = 0; i < 100000; i++) { }} - pętle opóźniające, dzięki nim diody wolniej zmieniają stan.
 \end{itemize}
 
 \section{PWM}
-W tym rozdziale opisana jest klasa, dzięki której można obsługiwać diody LED przy wykorzystaniu PWM, oraz krótka instrukcja jak napisać program zmieniajacy moc świecenie diod LED.
+W tym rozdziale opisana jest klasa, dzięki której można obsługiwać diody LED, przy wykorzystaniu PWM oraz krótka instrukcja jak: napisać program zmieniajacy moc świecenie diod LED.
 \subsection{Klasa PWM}
 Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.Hardware. 
 \subsubsection{Referencje}
@@ -199,43 +223,59 @@ Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.Hardware.
 \item Microsoft.SPOT.Hardware
 \end{itemize}
 \subsubsection{Konstruktor}
-PWM (PWMChannel \textcolor{red}{channel}, Double \textcolor{red}{frequency\_Hz}, Double \textcolor{red}{dutyCycle},  \textcolor{red}{bool invert})
+\begin{lstlisting}[frame=single] 
+PWM (
+PWMChannel channel,
+Doublefrequency_Hz, 
+Double dutyCycle,  
+bool invert)
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{channel} - kanał PWM
 \item \textcolor{red}{frequency\_Hz} - Częstotliwość impulsów w Hz.
-\item \textcolor{red}{dutyCycle} - Określa ile całkowitego czasu jest przeznaczonego na prace jako wartość od 0.0 do 1.0(0-100\%). Lub inaczej przez jaki procent czasu pracowania PWM wysyłany jest sygnał wysoki.
+\item \textcolor{red}{dutyCycle} - Określa ile całkowitego czasu jest przeznaczonego na prace jako wartość od 0.0 do 1.0(0-100\%). Inaczej mówiąc: przez jaki procent czasu pracy PWM wysyłany jest sygnał wysoki.
 \item \textcolor{red}{invert} - Wartość, która wskazuje, czy wyjście jest odwrócone.
 \end{itemize}
 \subsubsection{Atrybuty}
-double DutyCycle - Pobiera lub ustawia cykl pracy impulsu jako wartość od 0.0 do 1.0.
+double DutyCycle - Pobiera lub ustawia cykl pracy impulsu, jako wartość od 0.0 do 1.0.
 \subsubsection{Funkcje}
 void Start () - Uruchamia port PWM na nieokreślony czas.
 \subsection{Program}
-Aby napisać program obsługujący diody za pomocą PWM trzeba dla każdej używanej diody stworzyć obiekt:\newline \newline
- var led = new PWM(\space \textcolor{red}{ Cpu.PWMChannel.PWM\_x },\space \textcolor{red}{ 300},\space \textcolor{red}{ 0}, \space \textcolor{red}{ false});
+Aby napisać program obsługujący diody za pomocą PWM, trzeba dla każdej używanej diody stworzyć obiekt:
+\begin{lstlisting}[frame=single]
+var led = new PWM(
+Cpu.PWMChannel.PWM_x,
+300,
+0,
+false);
+\end{lstlisting}
 \begin{itemize}
-\item \textcolor{red}{Cpu.PWMChannel.PWM\_x} - x- przyjmuje wartości od 0 do 3. Oznaczając kanały PWM od 0 do 3(0-zielona, 1-pomarańczowa, 2-Czerwona, 3-Niebieska).
+\item \textcolor{red}{Cpu.PWMChannel.PWM\_x} - x- przyjmuje wartości od 0 do 3. Oznaczając kanały PWM od 0 do 3(0-zielona, 1-pomarańczowa, 2-Czerwona, //3-Niebieska).
 \item \textcolor{red}{300} - Częstotliwość ustawiona na 300 Hz. Przy małej częstotliwości zamiast zmieniać się moc świecenie diod, diody będą migać.
-\item \textcolor{red}{0} - przyjmuje 0\% czasu cyklu pracy(cały czas wysyła sygnał 0).
+\item \textcolor{red}{0} - przyjmuje 0\% czasu cyklu pracy (cały czas wysyła sygnał 0).
 \item \textcolor{red}{false} - wyjście ustawione jako nieodwrócone.
 \end{itemize}
-Oraz dla każdej trzeba wywołać funkcję Start:\\\\
-led.Start();\\
-Następnie trzeba zdefiniować kod programu(przykładowe zastosowanie):\\\\
-\textcolor{red}{while (true)}\\
-for (int i = 0; i \textless = 10; i++)\\
-\{\\
-\textcolor{red}{led.DutyCycle = 1 - ((double)i / 10);}\\ 
-\textcolor{red}{Thread.Sleep(1000);}\\ 
-\}
+Oraz dla każdej trzeba wywołać funkcję Start:
+\begin{lstlisting}[frame=single]
+led.Start();
+\end{lstlisting}
+Następnie trzeba zdefiniować kod programu (przykładowe zastosowanie):
+\begin{lstlisting}[frame=single]
+while (true)
+  for (int i = 0; i <= 10; i++)
+  {
+    led.DutyCycle = 1 - ((double)i / 10);
+    Thread.Sleep(1000);
+  }
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{while (true)} - Pętla sterująca, dzięki niej diody będą ciągle zmieniały swój stan.
-\item \textcolor{red}{led.DutyCycle = 1 - ((double)i / 10);} - zmiana mocy świecenie diody.
+\item \textcolor{red}{led.DutyCycle = 1 - ((double)i / 10);} - zmiana mocy świecenia diody.
 \item \textcolor{red}{Thread.Sleep(1000);} - uśpienie wątku na sekundę(1000 milisekund). Dzięki czemu diody co sekundę zmeiniają moc świecenia
 \end{itemize}
 
 \section{Zegar czasu rzeczywistego}
-W tym rozdziale opisana jest klasa, dzięki której można obsługiwać Zegar czasu rzeczywistego, oraz krótka instrukcja jak napisać program oparty na Zegarze.
+W tym rozdziale opisana jest klasa, dzięki której można obsługiwać Zegar czasu rzeczywistego oraz krótka instrukcja: jak napisać program oparty na Zegarze.
 \subsection{Klasa DateTime} 
 Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.
 \subsubsection{Atrybuty}
@@ -244,21 +284,24 @@ Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.
 \item DateTime.Now.Ticks - zwraca aktualną ilość przeskoków zegara. 
 \end{itemize}
 \subsection{Program}
-Przy samej obsłudze czasu nie trzeba tworzyć obiektów. Przykładowy kod w funkcji main:\\\\
- \textcolor{red}{while (true)}\\
-            \{\\
-                if (\textcolor{red}{DateTime.Now.Second\% 2==0})\\
-				\{Kod programu\}\\
-	\}
+Przy samej obsłudze czasu nie trzeba tworzyć obiektów. Przykładowy kod w funkcji main:
+\begin{lstlisting}[frame=single]
+while (true)
+{
+	if (DateTime.Now.Second% 2==0})
+		{Kod programu}
+}
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{while (true)} -Pętla sterująca, dzięki niej program się nie zakończy.
 \item \textcolor{red}{DateTime.Now.Second\% 2==0} - Jeżeli sekundy z aktualnego czasu nie są nieparzyste, wykonaj Kod programu.
 \end{itemize}
-Aby wyświetlić w debugerze np. aktualną liczbę przeskoków zegara można się posłużyć funckją:\\\\
+Aby wyświetlić w debugerze np. aktualną liczbę przeskoków zegara, można się posłużyć funckją:
+\begin{lstlisting}[frame=single]
 Debug.Print(DateTime.Now.Ticks);
-
+\end{lstlisting}
 \section{SPI-Akcelerometr}
-W tym rozdziale opisane są klasy, dzięki którym można obsługiwać Akcelerometr przy wykorzystaniu SPI, oraz krótka instrukcja jak napisać program odczytujący wartości akceleromoetru.
+W tym rozdziale opisane są klasy, dzięki którym można obsługiwać Akcelerometr przy wykorzystaniu SPI oraz krótka instrukcja: jak napisać program odczytujący wartości akceleromoetru.
 \subsection{Klasa SPI}
 Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.Hardware. 
 \subsubsection{Referencje}
@@ -266,7 +309,9 @@ Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.Hardware.
 \item Microsoft.SPOT.Hardware
 \end{itemize}
 \subsubsection{Konstruktor}
-SPI (\textcolor{red}{Config})
+\begin{lstlisting}[frame=single]
+SPI (Config)
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{Config} - Konfiguracja interfejsu SPI
 \end{itemize}
@@ -278,10 +323,9 @@ SPI (\textcolor{red}{Config})
 -void WriteRead ( byte[] \textcolor{red}{writeBuffer},ref byte[] \textcolor{red}{readBuffer})
 \begin{itemize}
 \item \textcolor{red}{writeBuffer} - buffor, który zostanie zapisany do interfejsu.
-\item \textcolor{red}{readBuffer} - buffor do którego zostaną zapisane dane odczytane z \newline interfejsu.
+\item \textcolor{red}{readBuffer} - buffor, do którego zostaną zapisane dane odczytane z \newline interfejsu.
 \end{itemize}
 
-\newpage
 \subsection{Klasa SPI.Configuration}
 Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.Hardware. 
 \subsubsection{Referencje}
@@ -289,11 +333,21 @@ Klasa zdefiniowana w przestrzeni nazw Microsoft.SPOT.Hardware.
 \item Microsoft.SPOT.Hardware
 \end{itemize}
 \subsubsection{Konstruktor}
-SPI.Configuration (Pin \textcolor{red}{ChipSelect\_Port}, bool \textcolor{red}{ChipSelect\_ActiveState}, \newline UInt16 \textcolor{red}{ChipSelect\_SetupTime}, UInt16 \textcolor{red}{ChipSelect\_HoldTime},  bool \textcolor{red}{Clock\_IdleState}, bool \textcolor{red}{Clock\_Edge}, UInt16 \textcolor{red}{Clock\_Rate}, SPI\_module \textcolor{red}{SPI\_mod})
+\begin{lstlisting}[frame=single]
+SPI.Configuration (
+Pin ChipSelect_Port, 
+boolChipSelect_ActiveState,
+UInt16 ChipSelect_SetupTime, 
+UInt16ChipSelect_HoldTime,  
+bool Clock_IdleState, 
+bool Clock_Edge, 
+UInt16 Clock_Rate, 
+SPI_module SPI_mod)
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{ChipSelect\_Port} - Port wybranego czipu.
 \item \textcolor{red}{ChipSelect\_ActiveState} - Stan aktywny dla portu wybranego czipu. Jeżeli prawda- port będzie ustawiany na wysoki w momencie dostępu do czipu, jezeli fałsz- port będzie ustawiany na niski w momencie dostępu do czipu.
-\item \textcolor{red}{ChipSelect\_SetupTime} - Czas pomiędzy wybraniem urządzenia a momentem kiedy zegar rozpocznie transakcje. 
+\item \textcolor{red}{ChipSelect\_SetupTime} - Czas pomiędzy wybraniem urządzenia, a momentem kiedy zegar rozpocznie transakcje. 
 \item \textcolor{red}{ChipSelect\_HoldTime} - Określa, jak długo port czipu musi zostać w stanie aktywnym po zakończeniu transakcji czytania lub pisania.
 \item \textcolor{red}{Clock\_IdleState} - Stan bezczynności zegara. Jeśli prawda- sygnał zegara SPI zostanie ustawiony na wysoki, gdy urządzenie jest w stanie spoczynku. Jeśli fałsz- sygnał zegara SPI zostanie ustawiony na niski, gdy urządzenie jest w stanie bezczynności. 
 \item \textcolor{red}{Clock\_Edge} - Jeśli prawda- dane są próbkowane na zboczu wznoszącym zegara SPI. Jeśli fałsz- dane są próbkowane na zboczu opadającym zegara SPI.
@@ -302,41 +356,56 @@ SPI.Configuration (Pin \textcolor{red}{ChipSelect\_Port}, bool \textcolor{red}{C
 \end{itemize}
 \newpage
 \subsection{Program}
-W klasie programu trzeba stworzyć obiekt:\\\\
-static SPI MySPI = null;\\\\
-Trzeba zdefiniować jedną metodę:\\\\
-public static void WriteRegister( \textcolor{red}{byte register},  \textcolor{red}{byte data})\\
-\{\\
-\textcolor{red}{byte[] tx\_data = new byte[2];}\\
-tx\_data[0] = (byte)(register | 0x00);\\
-tx\_data[1] = data;                \\   
-\textcolor{red}{MySPI.Write(tx\_data);}\\
-\}\\
+W klasie programu trzeba stworzyć obiekt:
+\begin{lstlisting}[frame=single]
+static SPI MySPI = null;
+\end{lstlisting}
+Trzeba zdefiniować metodę:
+\begin{lstlisting}[frame=single]
+public static void WriteRegister(byte register,byte data)
+{
+  byte[] tx_data = new byte[2];
+  tx_data[0] = (byte)(register | 0x00);
+  tx_data[1] = data;   
+  MySPI.Write(tx_data);
+}
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{byte register} - Adres rejestru.
 \item \textcolor{red}{byte data} - Wartość rejestru.
-\item \textcolor{red}{byte[] tx\_data = new byte[2];} - Tablica, która będzie wpisana do SPI. W 0 elemencie przechowuje adres rejestru w 1 elemencie przechowuje wartość rejestru.
+\item \textcolor{red}{byte[] tx\_data = new byte[2];} - Tablica, która będzie wpisana do SPI. W zerowym elemencie przechowuje adres rejestru, a w pierwszym elemencie przechowuje wartość rejestru.
 \item \textcolor{red}{MySPI.Write(tx\_data);} - wpisuje blok danych do akcelerometru.
 \end{itemize}
-Oraz jedną funkcję, zwracającą wartość z rejestru:\\\\
-public static byte ReadRegister(\textcolor{red}{byte register})\\
- \{\\
-\textcolor{red}{byte[] tx\_data = new byte[2];}\\
-\textcolor{red}{byte[] rx\_data = new byte[2]};\\
- tx\_data[0] = (byte)(register | 0x80);\\
- tx\_data[1] = 0;\\
- \textcolor{red}{MySPI.WriteRead(tx\_data, rx\_data);}\\
- return rx\_data[1];   \\                   
-\}
+Oraz funkcję, zwracającą wartość z rejestru:
+\begin{lstlisting}[frame=single]
+public static byte ReadRegister(byte register)
+{
+  byte[] tx_data = new byte[2];
+  byte[] rx_data = new byte[2]}
+  tx_data[0] = (byte)(register | 0x80);
+  tx_data[1] = 0;
+  MySPI.WriteRead(tx_data, rx_data);
+  return rx_data[1];
+}
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{byte register} - Adres rejestru.
-\item \textcolor{red}{byte[] tx\_data = new byte[2];} - Tablica, która będzie wpisana do SPI. W 0 elemencie przechowuje adres rejestru w 1 elemencie przechowuje wartość rejestru.
+\item \textcolor{red}{byte[] tx\_data = new byte[2];} - Tablica, która będzie wpisana do SPI. W zerowym elemencie przechowuje adres rejestru, a w pierwszym elemencie przechowuje wartość rejestru.
 \item \textcolor{red}{byte[] rx\_data = new byte[2]}; - Tablica, która będzie przechowywać wartości odczytane z rejestru.
 \item \textcolor{red}{MySPI.WriteRead(tx\_data, rx\_data);} - wpisuje i odczytuje bloki danych z akcelerometru.
 \end{itemize}
-W funkcji Main trzeba stworzyć obiekt SPI.Configuration:\\\\
-SPI.Configuration MyConfig =
-new SPI.Configuration(\space \textcolor{red}{ (Cpu.Pin)67},\space \textcolor{red}{ false},\space \textcolor{red}{ 0}, \space \textcolor{red}{ 0},\space \textcolor{red}{ true},\space \textcolor{red}{ true},\space \textcolor{red}{ 1000},\space \textcolor{red}{ SPI.SPI\_module.SPI1})
+W funkcji Main trzeba stworzyć obiekt SPI.Configuration:
+\begin{lstlisting}[frame=single]
+SPI.Configuration MyConfig = new SPI.Configuration(
+Cpu.Pin)67,
+false,
+0,
+0,
+true,
+true,
+1000,
+SPI.SPI_module.SPI1)
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{(Cpu.Pin)67} - SPI znajduje się na trzecim pinie portu E, czyli 16*4+3 = 67.
 \item \textcolor{red}{false} - Port będzie ustawiany na niski w momencie dostępu do czipu.
@@ -347,35 +416,50 @@ new SPI.Configuration(\space \textcolor{red}{ (Cpu.Pin)67},\space \textcolor{red
 \item \textcolor{red}{1000} -  Częstotliwość zegara SPI jest równa 1000 kHz
 \item \textcolor{red}{SPI.SPI\_module.SPI1} - Magistrala SPI 1. 
 \end{itemize}
-Trzeba zdefiniować globalny obiekt MySPI:\\\\
-MySPI = new SPI(MyConfig);\\\\
-Uaktywnić akcelerometr:\\\\
-WriteRegister(\space \textcolor{red}{0x20},\space \textcolor{red}{0xC7})
+Trzeba zdefiniować globalny obiekt MySPI:
+\begin{lstlisting}[frame=single]
+MySPI = new SPI( MyConfig );
+\end{lstlisting}
+Uaktywnić akcelerometr:
+\begin{lstlisting}[frame=single]
+WriteRegister( 0x20, 0xC7 )
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{0x20} -  W kodzie binarnym jest równe 0010 0000, pierwsze 00 oznacza tryb pracy zapisu, a reszta jest adresem rejestru.
 \item \textcolor{red}{0xC7} -  W kodzie binarnym jest równe 11000111: 
 \newline 1 - szybkość danych wyjściowych 400Hz(zero oznacza -100Hz)
 \newline 1 - ustawienie urządzenia w trybie aktywnym
-\newline 0 - wartości muszą być zero aby określone były zakresy X,Y,Z.
+\newline 0 - wartość musi być ustawiona na zero, aby określone były zakresy X,Y,Z.
 \newline 00 - normlany tryb.
 \newline 111 - oznacza włączenie kolejno Z,Y,X.
 \end{itemize}
-Aby odczytytać wartości akcelerometru, trzeba posłużyć się funckją \\ReadRegister(\textcolor{red}{X}), gdzie X może przyjąć jedną z wartości:
+Aby odczytytać wartości akcelerometru, trzeba posłużyć się funckją 
+\begin{lstlisting}[frame=single]
+ReadRegister(X)
+\end{lstlisting}
+gdzie X może przyjąć jedną z wartości:
 \begin{itemize}
 \item \textcolor{red}{0x2D} - Rejestr z wartością Z.
 \item \textcolor{red}{0x29} - Rejestr z wartością X.
 \item \textcolor{red}{0x2B} - Rejestr z wartością Y.
 \end{itemize}
-Żeby wyświetlić wartość w debugerze można się posłużyć funkcją:\\\\
-
+Żeby wyświetlić wartość w debugerze można się posłużyć funkcją:
+\begin{lstlisting}[frame=single]
 Debug.Print(ReadRegister(X));
+\end{lstlisting}
 
 \section{Timer}
-W tym rozdziale opisana jest klasa, dzięki której można obsługiwać Timer, oraz krótka instrukcja jak napisać program wykorzystujący Timer.
+W tym rozdziale opisana jest klasa, dzięki której można obsługiwać Timer oraz krótka instrukcja: jak napisać program wykorzystujący Timer.
 \subsection{Klasa Timer}
 Klasa zdefiniowana w przestrzeni nazw System.Threading.
 \subsubsection{Konstruktor}
-Timer(TimerCallback \textcolor{red}{callback}, object \textcolor{red}{state}, uint \textcolor{red}{dueTime}, uint \textcolor{red}{period})
+\begin{lstlisting}[frame=single]
+Timer(
+TimerCallback callback, 
+object state, 
+uint dueTime, 
+uint period )
+\end{lstlisting}
 \begin{itemize}
 \item \textcolor{red}{callback} - nazwa metody, która ma być wykonywana.
 \item \textcolor{red}{state} - obiekt z informacjami wykorzysytwanych w metodzie callback lub null.
@@ -383,22 +467,32 @@ Timer(TimerCallback \textcolor{red}{callback}, object \textcolor{red}{state}, ui
 \item \textcolor{red}{period} - czas między wywołananimy metody callback, podany w millisekundach.
 \end{itemize}
 \subsection{Program}
-Aby uzyskać timer trzeba zdeklarować specjalną metodę, która będzie wywoływana:\\\\
- public static void  \textcolor{red}{nazwa}(\textcolor{red}{object state})
-\{
-Kod programu
-\}
+Aby uzyskać timer trzeba zdeklarować specjalną metodę, która będzie wywoływana:
+\begin{lstlisting}[frame=single]
+public static void nazwa( object state )
+{ Kod programu }
+\end{lstlisting}
 \begin{itemize}
-\item \textcolor{red}{nazwa} - zdefiniowana przez programiste nazwa wywowywanej metody przez Timer.
+\item \textcolor{red}{nazwa} - zdefiniowana przez programistę nazwa wywowywanej metody przez Timer.
 \item \textcolor{red}{object state} - dodatkowy obiekt z infromacjami wykorzystywanymi w metodzie.
 \end{itemize}
-Pozostało utworzyć obiekt timer:\\\\
-Timer timer = new System.Threading.Timer(\space \textcolor{red}{ funTimer},\space \textcolor{red}{ null},\space \textcolor{red}{ 0},\space \textcolor{red}{ 1000});
+Trzeba utworzyć obiekt timer:
+\begin{lstlisting}[frame=single]
+Timer timer = new System.Threading.Timer(
+nazwa,
+null,
+0,
+1000 );
+ \end{lstlisting}
 \begin{itemize}
-\item \textcolor{red}{funTimer} - Metoda, która ma być wykonywana.
+\item \textcolor{red}{nazwa} - Metoda, która ma być wykonywana.
 \item \textcolor{red}{null} - Brak obiektu z infromacjami wykorzystywanymi w metodzie FunTimer.
 \item \textcolor{red}{0} - Brak opóźnienia wywołania metody FunTimer.
 \item \textcolor{red}{1000} - Czas, co ile będzie wywoływać się metoda Funtimer(1 sekunda)
 \end{itemize}
+Na koniec wystarczy stworzyć pętlę niskończoną, aby program się nie zakończył:
+\begin{lstlisting}[frame=single]
+while{true}
+\end{lstlisting}
 \end{document}
 
